--- a/src/style/userPopUp.css
+++ b/src/style/userPopUp.css
@@ -8,6 +8,15 @@
   display: flex;
   justify-content: center;
   margin-top: 20px;
+  gap:20px;
+}
+
+.signupWrapper{
+  display: flex;
+  flex-direction:column;
+  justify-content: center;
+  margin-top: 20px;
+  gap:20px;
 }
 
 label {
@@ -23,7 +32,7 @@ input, select {
   border-radius: 4px;
   border: 1px solid #ccc;
   width: 100%;
-  height:10%;
+  height:40%;
   box-sizing: border-box;
 }
 
@@ -36,4 +45,13 @@ input, select {
 button:hover{
    background-color: #D3D3D3;
    color: #a3c8f4;
+}
+
+.statusBlock{
+  display:flex;
+}
+
+.blockButton{
+  height:10%;
+  background-color:pink;
 }
