--- a/src/style/home.css
+++ b/src/style/home.css
@@ -1,15 +1,70 @@
 .home-container {
-    display: flex;
+    display: grid;
+    grid-template-columns:repeat(2, 1fr);
     justify-content: center;
     padding: 20px;
     background-color: white;
 }
   
 .users {
-    display: grid;
-    grid-template-columns:repeat(2, 1fr);
-    gap: 40px;
-    width: 100%;
-    margin: 0 auto;
+    display: block;
+    fle-direction:column;
+    justify-content: center;
+    width: 60%;
+    margin: auto;
 }
   
+.spinner-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9999;
+  }
+  
+  .spinner {
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    border-left-color: #22a6b3;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    animation: spin 1s linear infinite;
+  }
+  
+  @keyframes spin {
+    to {
+      transform: rotate(360deg);
+    }
+  }
+
+
+.error {
+    position:absolute;
+    bottom: 30px; 
+    left:25%;
+    right:25%;
+    text-align: center;
+    color: #d9534f; 
+    background-color: #f8d7da; 
+    border: 1px solid #d9534f;
+    padding:5px;
+    border-radius: 4px;
+}
+
+.error-save {
+  position:absolute;
+  bottom: 10px; 
+  left:25%;
+  right:25%;
+  text-align: center;
+  color: #d9534f; 
+  background-color: #f8d7da; 
+  border: 1px solid #d9534f;
+  padding:5px;
+  border-radius: 4px;
+}
