--- a/src/style/navbar.css
+++ b/src/style/navbar.css
@@ -44,3 +44,29 @@ h2 {
     background-color: #a3c8f4;
     color: #000;
 }
+
+.register-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding-top:5px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: auto; /* This ensures the overlay itself can scroll if necessary */
+  }
+  
+  .register-content {
+    background-color: white;
+    height:400px;
+    padding: 30px;
+    border-radius: 10px;
+    position: relative;
+    max-width: 50%;
+    overflow: auto;   /* Allow scrolling within the popup content */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    width: 50%;
+  }
