--- a/src/style/userDetails.css
+++ b/src/style/userDetails.css
@@ -7,6 +7,7 @@
   transition: transform 0.2s, box-shadow 0.2s;
   display: flex;
   flex-direction: column;
+  margin-top:40px;
 }
 
 .card:hover {
@@ -36,23 +37,29 @@
   position: fixed;
   top: 0;
   left: 0;
+  padding-top:5px;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.2);
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: auto; /* This ensures the overlay itself can scroll if necessary */
 }
 
 .popup-content {
   background-color: white;
-  padding: 30px;
+  padding: 20px;
+  padding-bottom:50px;
   border-radius: 10px;
   position: relative;
-  max-width:50%;
+  max-width: 50%;
+  max-height: 90vh; 
+  overflow: auto;   /* Allow scrolling within the popup content */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  width:50%;
+  width: 50%;
 }
+
 
 
 .closeButton {
