--- a/src/style/userPopUp.css
+++ b/src/style/userPopUp.css
@@ -15,8 +15,7 @@
   display: flex;
   flex-direction:column;
   justify-content: center;
-  margin-top: 20px;
-  gap:20px;
+  margin-top: 10px;
 }
 
 label {
@@ -25,14 +24,13 @@ label {
 }
 
 input, select {
-  margin-top: 10px;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   padding: 10px;
   font-size: 14px;
   border-radius: 4px;
   border: 1px solid #ccc;
   width: 100%;
-  height:40%;
+  height:35px;
   box-sizing: border-box;
 }
 
@@ -54,4 +52,26 @@ button:hover{
 .blockButton{
   height:10%;
   background-color:pink;
+}
+
+.profileImage{
+  width:150px;
+}
+
+.user-details-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid grey;
+  padding-bottom: 10px;
+  padding-top:10px;
+}
+
+.profile-image {
+  width: 150px;
+  margin-right: 20px;
+}
+
+.user-details-title {
+  margin-left: 20px;
 }
