--- a/src/style/home.css
+++ b/src/style/home.css
@@ -68,3 +68,22 @@
   padding:5px;
   border-radius: 4px;
 }
+
+
+
+.role-admin{
+  border-right: 3px dashed #c5dff8;
+}
+
+.roles{
+  width:60%;
+  margin:auto;
+  font-size:18px;
+  text-align:center;
+  background-color:#c5dff8;
+  border-radius:5px;
+  padding-top:15px;
+  padding-bottom:15px;
+  margin-top:20px;
+  background: linear-gradient(90deg, #e0e9f2, #eef5fd);
+}
