--- a/src/style/userPopUp.css
+++ b/src/style/userPopUp.css
@@ -32,6 +32,7 @@ input, select {
   width: 100%;
   height:35px;
   box-sizing: border-box;
+  background-color:#f7fafc
 }
 
 .partEdit {
@@ -52,6 +53,11 @@ button:hover{
 .blockButton{
   height:10%;
   background-color:pink;
+  font-weight:normal;
+}
+
+.saveButton{
+  font-weight:normal;
 }
 
 .profileImage{
